fix footer overflow

--- a/addon/styles/addon.less
+++ b/addon/styles/addon.less
@@ -144,4 +144,7 @@ h2.form-header {
 .copyright-text {
   text-align: center;
   font-size: 0.9rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
